--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "reactstrap": "^9.1.3"
   },
   "devDependencies": {
     "eslint": "8.22.0",
