--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.5",
     "firebase": "^9.9.3",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2",
-    "reactstrap": "^9.1.3"
+    "reactstrap": "^9.1.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "8.22.0",
