--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.9",
+    "@chakra-ui/react": "^2.2.9",
+    "@emotion/react": "^11.10.0",
+    "@emotion/styled": "^11.10.0",
     "@reduxjs/toolkit": "^1.8.5",
     "firebase": "^9.9.3",
+    "framer-motion": "^6.5.1",
     "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
